fix: FFLogs parity 비교용 이벤트 디코딩과 replay 검증 개선